tests/NormalTests/paczka1/fuzzy1/10454782.err
Error in line 3: apNH A327 72,7
Error in line 9: 405r A530 I86,6
Error in line 8: apNH A489 61,2
Error in line 16: A530 A327 65,8
Error in line 24: iapS A327 93,4
